--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,10 +1,10 @@
-// @import "reset";
+@import "./reset";
 @import "./variables";
 // @import "mixin";
 @import "./global";
 @import "./header";
 @import "./sidebar";
-// @import "short-video";
+@import "./short-video";
 // @import "channel";
 // @import "love";
 // @import "follow-video";
