--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -31,7 +31,7 @@
     // position: relative;
   
     .menu {
-      margin-left: -55px;
+      width: 100%;
       display: flex;
       align-items: center;
       flex-direction: column;
@@ -62,6 +62,7 @@
     row-gap: 8px;
     padding: 25px 6px 22px 6px;
     border-radius: 12px;
+    cursor: pointer;
     &:hover {
       background-color: #1a1d2a;
     }
