--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,13 +1,13 @@
-@import "./reset";
-@import "./variables";
+@import "reset";
+@import "variables";
 // @import "mixin";
-@import "./global";
-@import "./header";
-@import "./sidebar";
-@import "./short-video";
+@import "global";
+@import "header";
+@import "sidebar";
+@import "short-video";
 // @import "channel";
 // @import "love";
-// @import "follow-video";
+@import "follow-video";
 // @import "search-result";
 // @import "pricing";
 // @import "dialog";
