--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,9 +5,9 @@
 @import "header";
 @import "sidebar";
 @import "short-video";
-// @import "channel";
+@import "channel";
 // @import "love";
 @import "follow-video";
-// @import "search-result";
+@import "search-result";
 // @import "pricing";
 // @import "dialog";
