--- a/src/sass/_channel.scss
+++ b/src/sass/_channel.scss
@@ -1,6 +1,6 @@
 .channel-page {
   // min-height: calc(100vh - 120px);
-  max-height: calc(100vh - 130px);
+  // max-height: calc(100vh - 130px);
 
   &__info {
     display: flex;
