--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,7 +6,7 @@
 @import "sidebar";
 @import "short-video";
 @import "channel";
-// @import "love";
+@import "love";
 @import "follow-video";
 @import "search-result";
 // @import "pricing";
