--- a/src/sass/_love.scss
+++ b/src/sass/_love.scss
@@ -80,7 +80,7 @@
     // background-color: red;
     // height: calc(100% - 70px);
     overflow-y: auto;
-    @include scrollbar(rgba(255, 255, 255, 0.2), "#090B12", 6px);
+    // @include scrollbar(rgba(255, 255, 255, 0.2), "#090B12", 6px);
     // max-height: 900px;
     @media screen and (max-width: 1535px) {
       grid-template-columns: 1fr 1fr;
@@ -116,13 +116,16 @@
       bottom: 12px;
       left: 9px;
       right: 9px;
-      @include replace-font(500, 12px, 14px);
+      // @include replace-font(500, 12px, 14px);
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
       word-break: break-word;
+      font-weight: 500;
+      font-size: 12px;
+      line-height: 14px;
     }
 
     &__backdrop {
