--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -9,5 +9,5 @@
 @import "love";
 @import "follow-video";
 @import "search-result";
-// @import "pricing";
-// @import "dialog";
+@import "pricing";
+@import "dialog";
