--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,6 @@
 @import "reset";
 @import "variables";
-// @import "mixin";
+@import "mixin";
 @import "global";
 @import "header";
 @import "sidebar";
